$Id: History,v 1.28 1999-12-09 00:04:54 lockman Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------

g3tog4- 06-Dec-1999 W.Lockman
- removed G3fillParams.cc
- G3Eletable.cc: cast double Z to int
- added G3toG4Debug global variable (yuch)
- removed G4.cc.omit

g3tog4-V00-01-cand03 05-Dec-1999  G.Cosmo
- Merged HEAD of main trunk with tag "wsl-991205" which now includes
  updates by Ivana&Pedro, as well as RW->G4RW migration, STL map
  migration and integration work by B.Lockman.

g3tog4-br4_0_1fixes-iv2-99nov11    12-Nov-1999  J. Apostolakis
- Tag of new fixes from consolidation of changes by Ivana & Pedro,
  as these fixes were on November 11th, at 15:00

g3tog4-br4_0_1fixes-iv1-99nov02    12-Nov-1999  J. Apostolakis
- Tag of fixes from consolidation of changes by Ivana & Pedro,
  as these fixes were on November 2nd. 

Summary of changes to be added here (to be obtained from Ivana, Pedro)

g3tog4-4_0_1-fixes-branch  Branch for fixes 
- Changes introduced and tested by Ivana Hrivnacova and Pedro Arce 
  based on geant4-00-01

g3tog4-V00-01-02 22-Nov-1999 Lockman
- g3test.F renamed to g3test.F.save
- G3RotTable::get now returns a pointer to a G4RotationMatrix thru an upcast
- G4BuildTree : now get G4RotationMatrix* rather than G3toG4Rotationmatrix*

g3tog4-V00-01-01 20-Oct-99 Allison
- G3MatTable.cc: introduced G4String matid (a(3,lngth)) to help STL Interface.

g3tog4-V00-01-00 28-Jul-1999 Lockman
- Commented out "Deleted..." in destructors.

g3tog4-01-01-00 19-Jul-1999 Lockman
- G3matTable, G3MedTable, G3RotTable: convert from lists G4RWTPtrOrderedVector 
  to G4RWTPtrHashDictionary to allow for noncontiguous indices
- G3RotTable::Put,Get->put,get. 
- G3toG4BuildGeom, G4gsrotm: put,get signature change 

g3tog4-01-00-06 28-May-1999 Lockman
- ~G3Mat,MedTable: do not destroy G4Material Objects in list. Do a clear()
  of the list, not clearAndDestroy, then delete the list.