@@ -1,5 +1,3 @@
-#ifndef _G4ELETABLE_
-#define _G4ELETABLE_ 1
 // This code implementation is the intellectual property of
 // the GEANT4 collaboration.
 //
@@ -7,9 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3EleTable.hh,v 1.3 1999-12-05 17:50:01 gcosmo Exp $
+// $Id: G3EleTable.hh,v 1.4 1999-12-09 01:27:42 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
+
+#ifndef G4ELETABLE_HH
+#define G4ELETABLE_HH 1
+
 #include "g4rw/ctoken.h"
 #include "g4rw/tpordvec.h"
 #include "globals.hh"
