@@ -5,13 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3MedTableEntry.hh,v 1.2 1999-12-05 17:50:02 gcosmo Exp $
+// $Id: G3MedTableEntry.hh,v 1.3 1999-12-09 01:27:43 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // by I.Hrivnacova, 27 Sep 99
 
-#ifndef G3_MED_TABLE_ENTRY_H
-#define G3_MED_TABLE_ENTRY_H
+#ifndef G3MEDTABLEENTRYH_HH
+#define G3MEDTABLEENTRYH_HH 1
 
 #include "globals.hh"
 
@@ -85,4 +85,4 @@ inline G4UserLimits* G3MedTableEntry::GetLimits() const
 inline G4int G3MedTableEntry::GetISVOL() const
 { return fISVOL; }
 
-#endif //G3_MAT_TABLE_ENTRY_H
+#endif
