@@ -1,5 +1,5 @@
-#ifndef _G3TOG4DEBUG_
-#define _G3TOG4DEBUG_ 1
+#ifndef G3TOG4DEBUG_HH
+#define G3TOG4DEBUG_HH 1
 #include "globals.hh"
-G4int G3toG4Debug = 0;
+G4int G3toG4Debug();
 #endif
