@@ -5,11 +5,12 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3toG4MakeSolid.hh,v 1.3 1999-12-05 17:50:04 gcosmo Exp $
+// $Id: G3toG4MakeSolid.hh,v 1.4 1999-12-09 01:27:47 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-#ifndef _G3TOG4MAKESOLID_
-#define _G3TOG4MAKESOLID_ 1
+#ifndef G3TOG4MAKESOLID_HH
+#define G3TOG4MAKESOLID_HH 1
+
 G4VSolid* G3toG4MakeSolid(const G4String& vname, const G4String& shape, 
 			  const G4double* Rpar, const G4int npar, 
 			  G4bool& NegVolPars, G4bool& Deferred, 
