@@ -5,16 +5,13 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3toG4BuildTree.hh,v 1.4 1999-12-09 01:27:47 lockman Exp $
+// $Id: G3toG4Debug.cc,v 1.1 1999-12-09 01:27:49 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-// modified by I.Hrivnacova, 13.10.99
 
-#ifndef G3TOG4BUILDTREE_HH
-#define G3TOG4BUILDTREE_HH 1
-
-#include "G3VolTableEntry.hh"
-
-void G3toG4BuildTree(G3VolTableEntry* curVTE, G3VolTableEntry* motherVTE);
-
-#endif  
+#include "G3toG4Debug.hh"
+G4int
+G3toG4Debug()
+{
+  return 0;
+}
